tests/baselines/reference/arithmeticOnInvalidTypes.errors.txt
tests/cases/compiler/arithmeticOnInvalidTypes.ts(3,9): error TS2365: Operator '+' cannot be applied to types 'Number' and 'Number'.


==== tests/cases/compiler/arithmeticOnInvalidTypes.ts (1 errors) ====
    var x: Number;
    var y: Number;
    var z = x + y;
            ~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'Number' and 'Number'.
    var z2 = x - y;
    var z3 = x * y;
    var z4 = x / y;